--- a/PCompus_controller/src/main/webapp/static/css/styles.css
+++ b/PCompus_controller/src/main/webapp/static/css/styles.css
@@ -7,6 +7,26 @@
     padding: 0;
 }
 
+h1 {
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
+
+h2 {
+    margin-top: 15px;
+    margin-bottom: 15px;
+}
+
+h3 {
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
+
+h4 {
+    margin-top: 5px;
+    margin-bottom: 5px;
+}
+
 em,
 .navbar i {
     font-style: normal;
@@ -79,6 +99,10 @@ input, select, button:focus::-webkit-input-placeholder {
     *zoom: 1;
 }
 
+.margin-top-10 {
+    margin-top: 10px;
+}
+
 ul {
     list-style: none;
 }
@@ -107,7 +131,7 @@ body {
 }
 
 .nav-item {
-    width: 6rem;
+    width: 9rem;
     margin-left: 1.5rem;
     text-align: center;
 }
@@ -146,7 +170,7 @@ body {
 .weather-nav {
     width: 1.875rem;
     height: 1.875rem;
-    margin-left: 7.25rem;
+    margin-left: 23.25rem;
     position: relative;
 }
 
@@ -190,7 +214,7 @@ body {
     border: 2px solid black;
     border-radius: 50%;
     overflow: hidden;
-    margin-left: 1.5625rem;
+    margin-right: 2rem;
 }
 
 .row {
@@ -206,8 +230,8 @@ body {
     width: 135px;
     height: 235px;
     float: right;
-    top: -20px;
-    right: 12px;
+    top: -60px;
+    right: 5px;
     border: 2px solid black;
     visibility: collapse;
     position: relative;
@@ -386,8 +410,12 @@ body {
 }
 
 .main-content {
+    margin-top: 15px;
 }
 
 .data-item-title > button {
     float: right;
 }
+
+
+
