--- a/PCompus_controller/src/main/webapp/static/css/styles.css
+++ b/PCompus_controller/src/main/webapp/static/css/styles.css
@@ -27,6 +27,10 @@ h4 {
     margin-bottom: 5px;
 }
 
+.padding-right-0 {
+    padding-right: 0;
+}
+
 em,
 .navbar i {
     font-style: normal;
@@ -271,7 +275,7 @@ body {
 }
 
 .data-item-title {
-    padding-left: 0;
+    padding: 0;
     font: 1rem 'Microsoft YaHei', serif;
     color: #359ddf;
 }
