--- a/PCompus_controller/src/main/webapp/static/css/pages/Apps.Diary.css
+++ b/PCompus_controller/src/main/webapp/static/css/pages/Apps.Diary.css
@@ -1716,36 +1716,8 @@ Dashboard date range panel
     font-size: 16px;
 }
 
-/***
-Footer
-***/
-.footer {
-    padding: 8px 20px 5px 20px;
-    font-size: 12px;
-}
 
-.footer:after,
-.footer:before {
-    content: "";
-    display: table;
-    line-height: 0;
-}
-
-.footer:after {
-    clear: both;
-}
-
-.footer .footer-inner {
-    float: left;
-    display: inline-block;
-}
-
-.footer .footer-tools {
-    float: right;
-    display: inline-block;
-}
-
-.footer .footer-tools .go-top {
+.go-top {
     display: block;
     text-decoration: none;
     cursor: pointer;
@@ -1756,13 +1728,13 @@ Footer
     padding: 0px 6px 0px 6px;
 }
 
-.footer .footer-tools .go-top i {
+.go-top i {
     font-size: 22px;
     margin-bottom: 5px;
 }
 
 /* begin: fixed footer */
-.page-footer-fixed .footer {
+.page-footer-fixed {
     position: fixed;
     left: 0;
     right: 0;
