--- a/PCompus_controller/src/main/webapp/static/css/styles.css
+++ b/PCompus_controller/src/main/webapp/static/css/styles.css
@@ -117,9 +117,18 @@ input, select, button:focus::-webkit-input-placeholder {
 ul {
     list-style: none;
 }
-
 body {
-    background-color: #faead4;
+    font-family: 'Open Sans';
+    padding: 0px !important;
+    margin: auto;
+    font-size: 13px;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    direction: ltr;
+    background-size: 100% !important;
+    background: url(/PCompus/static/img/background/background-blue.jpg) no-repeat;
+    background-attachment: fixed;
 }
 
 .navbar {
@@ -255,7 +264,8 @@ body {
     padding: 0;
     margin-top: 18px;
     margin-bottom: 0;
-    background-color: #faead4;
+    color: white;
+    background-color: transparent;
 }
 
 .precentpage-nav-head {
@@ -270,6 +280,10 @@ body {
 .precentpage-nav-content-ol {
     margin-top: 6px;
     font: italic 0.6rem 'Microsoft YaHei', serif;
+}
+
+.breadcrumb-item > a {
+    color: white;
 }
 
 .active {
@@ -333,7 +347,7 @@ body {
 .myaudio {
     width: 100%;
     height: 60px;
-    background-color: #faead4;
+    background-color: #00000033;
     position: fixed;
     bottom: 0;
     box-shadow: 0 4px 8px 0 rgb(0 0 0 / 10%), 0 6px 20px 0 rgb(0 0 0 / 19%);
@@ -434,8 +448,8 @@ body {
     list-style-type: none;
 }
 
-body::-webkit-scrollbar {
-    display: none;
+.breadcrumb-item.active {
+    color: #ffffffff;
 }
 
 #nc-main {
@@ -1255,7 +1269,6 @@ table {
 }
 
 .container-fluid {
-    background: aquamarine;
     height: 100%;
 }
 
@@ -1407,3 +1420,14 @@ table {
     display: unset;
 }
 
+.footer {
+    position: static;
+    right: 0px;
+    bottom: 0px;
+    background: #0000000d;
+    color: #000;
+    display: block;
+    width: 100%;
+    text-align: center;
+    z-index: 10;
+}
