--- a/PCompus_controller/src/main/webapp/static/css/styles.css
+++ b/PCompus_controller/src/main/webapp/static/css/styles.css
@@ -452,6 +452,12 @@ body {
     color: #ffffffff;
 }
 
+.row {
+    margin-left: 0px;
+    margin-right: 0px;
+
+}
+
 #nc-main {
     position: absolute;
     height: 100vh;
